--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -4,42 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "作業1：\n",
-    "\n",
-    "請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
-    "\n",
-    "1. 你選的這組資料為何重要\n",
-    "    這是UCI Machine Learning Repository 廣泛使用前10名的資料集\n",
-    "    透過分析，可以協助判斷乳癌為良性或是惡性\n",
-    "\n",
-    "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
-    "    https://www.kaggle.com/uciml/breast-cancer-wisconsin-data\n",
-    "    資料來源：UCI Machine Learning Repository，許多常見的資料也是由此網站提供，如iris。\n",
-    "    \n",
-    "3. 蒐集而來的資料型態為何\n",
-    "    結構化資料，為CSV檔案\n",
-    "    除了ID number & Diagnosis，其他欄位皆是數值 \n",
-    "\n",
-    "4. 這組資料想解決的問題如何評估\n",
-    "    根據資料中Diagnosis診斷結果的欄位，分析細胞相關資料對於乳癌良惡性的影響\n",
-    "    此為分類問題(malignant/benign)，可以依正確率及AUC作為評估\n",
-    "\n",
-    "作業2：\n",
-    "\n",
-    "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
-    "\n",
-    "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
-    "    假設 1)載客數 2)載客平均里程數，皆為影響提升業績的變數，\n",
-    "    透過長期的資料來分析應增加載客數或是減少短程載客，會對於車隊的營收有較大的影響\n",
-    "\n",
-    "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
-    "    透過司機每日回報來蒐集資料\n",
-    "    \n",
-    "3. 蒐集而來的資料型態為何\n",
-    "    數值\n",
-    "\n",
-    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
-    "    利用迴歸分析來驗證"
+    "## 作業1：\n",
+    "### 請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
+    "### * 你選的這組資料為何重要 \n",
+    "#### 這是UCI Machine Learning Repository 廣泛使用前10名的資料集 透過分析，可以協助判斷乳癌為良性或是惡性\n",
+    "### * 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集) \n",
+    "#### https://www.kaggle.com/uciml/breast-cancer-wisconsin-data 資料來源：UCI Machine Learning Repository，許多常見的資料也是由此網站提供，如iris。\n",
+    "### * 蒐集而來的資料型態為何 \n",
+    "#### 結構化資料，為CSV檔案 除了ID number & Diagnosis，其他欄位皆是數值 \n",
+    "### * 這組資料想解決的問題如何評估 \n",
+    "#### 根據資料中Diagnosis診斷結果的欄位，分析細胞相關資料對於乳癌良惡性的影響 此為分類問題(malignant/benign)，可以依正確率及AUC作為評估\n",
+    "## 作業2：\n",
+    "### 想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
+    "### * 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」) \n",
+    "#### 假設 1)載客數 2)載客平均里程數，皆為影響提升業績的變數， 透過長期的資料來分析應增加載客數或是減少短程載客，會對於車隊的營收有較大的影響\n",
+    "### * 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集) \n",
+    "#### 透過司機每日回報來蒐集資料\n",
+    "### * 蒐集而來的資料型態為何 \n",
+    "#### 數值\n",
+    "### * 你要回答的問題，其如何評估 (tips：你的假設如何驗證) \n",
+    "#### 利用迴歸分析來驗證"
    ]
   },
   {
